tests/negative/parse_unexpected_eof.uzpp
// XATOLIK_KUTILMOQDA: parse: kutilmagan fayl oxiri
ulash "uzpp_runtime.hpp"
butun asosiy() {
    butun x =
